# helios-engine

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  Install.cmake  ProjectOptions.cmake  ThirdParty.cmake  helios-engineConfig.cmake.in
src/: CMakeLists.txt  _module.ixx  bootstrap.ixx  helios-engine-config.h  registry.ixx
src/core/: README.md  TypeIndexer.ixx  TypedTupleCat.ixx  _module.ixx  registry.ixx
src/core/components/: AABBComponent.ixx  ColorComponent.ixx  DebugNameComponent.ixx  Mat4Component.ixx  NameComponent.ixx  NumericValueComponent.ixx  QuaternionComponent.ixx  README.md  StringComponent.ixx  Vec2Component.ixx  Vec3Component.ixx  Vec4Component.ixx  _module.ixx
src/core/concepts/: IsDirtyTrackerLike.ixx  IsStrongIdLike.ixx  README.md  _module.ixx
src/core/container/: ConceptModelRegistry.ixx  HandleManyToManyMap.ixx  HandleMultiMap.ixx  README.md  _module.ixx
src/core/memory/: ErasedUnique.ixx  README.md  _module.ixx
src/core/spatial/: README.md  Transform.ixx  _module.ixx
src/core/systems/: CallableSystem.ixx  ClearAllDirtySetsSystem.ixx  ClearDirtySetsSystem.ixx  ClearDirtySystem.ixx  LambdaSystem.ixx  VersioningCommitSystem.ixx  _module.ixx
src/core/thread/: JobSystem.ixx  _module.ixx
src/core/types/: ComponentTypeSpecs.ixx  ComponentTypeTags.ixx  FuncDefs.ixx  README.md  StrongId.ixx  TypeDefs.ixx  _module.ixx
src/core/units/: README.md  Unit.ixx  _module.ixx
src/gameplay/: README.md  _module.ixx  registry.ixx
src/gameplay/common/: _module.ixx
src/gameplay/gamestate/: GameStateManager.ixx  README.md  _module.ixx
src/gameplay/matchstate/: MatchStateManager.ixx  README.md  _module.ixx
src/gameplay/spawn/: README.md  SpawnManager.ixx  _module.ixx  registry.ixx
src/input/: InputAdapter.ixx  InputManager.ixx  InputSnapshot.ixx  README.md  _module.ixx
src/input/gamepad/: DeadzoneStrategy.ixx  GamepadSettings.ixx  GamepadState.ixx  README.md  RadialDeadzoneStrategy.ixx  _module.ixx
src/input/types/: Gamepad.ixx  Key.ixx  README.md  _module.ixx
src/physics/: README.md  _module.ixx  registry.ixx
src/physics/collision/: Bounds.ixx  README.md  _module.ixx  registry.ixx
src/physics/motion/: README.md  _module.ixx  registry.ixx
src/platform/: README.md  _module.ixx
src/platform/concepts/: IsAnyPlatformHandle.ixx  README.md  _module.ixx
src/platform/environment/: PlatformEntityManager.ixx  README.md  __module.ixx
src/platform/glfw/: GLFWPlatformManager.ixx  _module.ixx
src/platform/lifecycle/: README.md  _module.ixx
src/platform/window/: README.md  WindowEntityManager.ixx  __module.ixx
src/rendering/: FramebufferToViewportMap.ixx  README.md  RenderManager.ixx  RenderPass.ixx  RenderTargetToViewportMap.ixx  Vertex.ixx  _module.ixx  registry.ixx
src/rendering/asset/: README.md  _module.ixx
src/rendering/assets/: Cube.ixx  README.md  _module.ixx
src/rendering/common/: README.md  _module.ixx
src/rendering/framebuffer/: FramebufferEntityManager.ixx  README.md  RenderTargetEntity.ixx  RenderTargetEntityManager.ixx  _module.ixx
src/rendering/material/: MaterialEntity.ixx  MaterialEntityManager.ixx  MaterialProperties.ixx  MaterialShaderProperties.ixx  MaterialShaderPropertiesOverride.ixx  README.md  _module.ixx
src/rendering/mesh/: MeshEntity.ixx  MeshEntityManager.ixx  MeshRegistry.ixx  README.md  _module.ixx
src/rendering/model/: README.md  _module.ixx  registry.ixx
src/rendering/renderTarget/: README.md
src/rendering/shader/: NullUniformCacheStrategy.ixx  README.md  ShaderEntity.ixx  ShaderEntityManager.ixx  UniformSemantics.ixx  UniformValueBag.ixx  UniformValueMap.ixx  _module.ixx
src/rendering/viewport/: README.md  ViewportEntity.ixx  ViewportEntityManager.ixx  _module.ixx
src/runtime/: README.md  _module.ixx  registry.ixx
src/runtime/concepts/: HasClear.ixx  HasReset.ixx  HasSubmit.ixx  HasTag.ixx  README.md  _module.ixx
src/runtime/enginestate/: EngineStateBindings.ixx  EngineStateManager.ixx  README.md  _module.ixx
src/runtime/gameloop/: CommitPoint.ixx  GameLoop.ixx  Pass.ixx  PassCommitListener.ixx  PassEndListener.ixx  Phase.ixx  README.md  TypedPass.ixx  _module.ixx
src/runtime/lifecycle/: README.md  WorldLifecycleManager.ixx  _module.ixx  registry.ixx
src/runtime/messaging/: README.md  _module.ixx
src/runtime/pooling/: EntityPool.ixx  EntityPoolConfig.ixx  EntityPoolManager.ixx  EntityPoolRegistry.ixx  EntityPoolSnapshot.ixx  README.md  _module.ixx  registry.ixx
src/runtime/timing/: README.md  Timer.ixx  TimerManager.ixx  _module.ixx
src/runtime/world/: EngineWorld.ixx  EntityMutationManager.ixx  GameObject.ixx  GameObjectEntityManager.ixx  GameWorld.ixx  Level.ixx  Manager.ixx  ManagerRegistry.ixx  README.md  ResourceRegistry.ixx  RuntimeEnvironment.ixx  Session.ixx  System.ixx  SystemRegistry.ixx  UpdateContext.ixx  _module.ixx
src/scene/: AABBCullingStrategy.ixx  NoCullingStrategy.ixx  README.md  SceneEntityManager.ixx  SceneMemberVisibilityRegistry.ixx  _module.ixx  registry.ixx
src/scene/components/: CameraBindingComponent.ixx  LookAtComponent.ixx  PerspectiveCameraComponent.ixx  ProjectionMatrixComponent.ixx  README.md  SceneBindingComponent.ixx  SceneMemberComponent.ixx  ViewMatrixComponent.ixx  ViewportComponent.ixx  _module.ixx
src/scene/concepts/: IsFrustumCullerLike.ixx  IsSceneHandle.ixx  _module.ixx
src/scene/systems/: PerspectiveCameraUpdateSystem.ixx  SceneMemberRenderContextExtractionSystem.ixx  SceneRenderSystem.ixx  (+3 more)
src/spatial/: README.md  _module.ixx  registry.ixx
src/state/: Bindings.ixx  CombinedStateToIdMapPair.ixx  README.md  StateCommandHandler.ixx  StateManager.ixx  StateToIdMap.ixx  StateToIdMapPair.ixx  StateTransitionListener.ixx  TypedStateCommandHandler.ixx  _module.ixx
src/tooling/: FpsMetrics.ixx  FramePacer.ixx  FrameStats.ixx  README.md  _module.ixx
src/util/: Colors.ixx  Guid.ixx  README.md  Random.ixx  _module.ixx
tests/: CMakeLists.txt
tests/core/: units.test.cpp
tests/math/transform/: camera.test.cpp
tests/math/types/: vec2.test.cpp  vec3.test.cpp  vec4.test.cpp
tests/util/: guid.test.cpp
(+516 files in other folders)
